<resources>
    <string name="app_name">AbiHappy</string>
    <string name="title_text">Be Abi-Happy!</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="start_button_text">Start</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_button_text">Sign in</string>
    <string name="or_text">Or</string>
    <string name="create_text">Sign up</string>
    <string name="signup_button_text">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="title_edit_text">Title</string>
    <string name="thoughts_edit_text">Thought</string>
    <string name="post_button_text">Save</string>
    <string name="title_text_view">Title</string>
    <string name="menu_title">Add to journal</string>
    <string name="sign_out_text">Sign out</string>
    <string name="empty_timeline_text">Looks like a vicious tiger ate all of your thoughts today... Get started by tapping \"+\" above</string>
    <string name="card_row_text_title">Title</string>
    <string name="card_row_text_thought">Thought</string>
    <string name="card_row_text_date">Date created</string>
</resources>